actualizacion de medidad video section mis ultimos trabajos

--- a/sass/_inicio.scss
+++ b/sass/_inicio.scss
@@ -855,6 +855,7 @@
                 position: absolute;
                 top: 0%;
                 left: -150%;
+                height: 110%;
             }
 
         }
