actualizacion de page proyecto dsains

--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -167,7 +167,7 @@
       height: 100vh;
 
       h3 {
-        padding: 15vh 0.5em 1em 0.5em;
+        padding: 10vh 0.5em 1em 0.5em;
         flex-grow: 0;
         font-family: monabold;
         font-size: 10vh;
@@ -263,7 +263,7 @@
       height: 100vh;
 
       h3 {
-        padding: 15vh 0.5em 1em 0.5em;
+        padding: 10vh 0.5em 1em 0.5em;
         flex-grow: 0;
         font-family: monabold;
         font-size: 10vh;
@@ -330,7 +330,7 @@
       height: 100vh;
 
       h3 {
-        padding: 15vh 0.5em 1em 0.5em;
+        padding: 10vh 0.5em 1em 0.5em;
         flex-grow: 0;
         font-family: monabold;
         font-size: 10vh;
@@ -348,7 +348,7 @@
         display: flex;
         flex-direction: column;
         align-items: start;
-        justify-content: center;
+        justify-content: start;
         width: 100%;
         height: 100%;
 
@@ -369,7 +369,7 @@
         }
 
         .cont_fuentess {
-          height: 100%;
+          height: 50%;
           width: 100%;
           display: grid;
           grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
@@ -616,7 +616,7 @@
         height: 100vh;
 
         h3 {
-          padding: 12vh 0.5em 1em 0.5em;
+          padding: 5vh 0.5em 1em 0.5em;
           flex-grow: 0;
           font-family: monabold;
           font-size: 6vh;
@@ -715,7 +715,7 @@
         height: 100vh;
 
         h3 {
-          padding: 12vh 0.5em 1em 0.5em;
+          padding: 5vh 0.5em 1em 0.5em;
           flex-grow: 0;
           font-family: monabold;
           font-size: 6vh;
@@ -782,7 +782,7 @@
         height: 100vh;
 
         h3 {
-          padding: 12vh 0.5em 1em 0.5em;
+          padding: 5vh 0.5em 1em 0.5em;
           flex-grow: 0;
           font-family: monabold;
           font-size: 6vh;
