--- a/style/sass.css
+++ b/style/sass.css
@@ -1966,7 +1966,7 @@ p {
   height: 100vh;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
-  padding: 15vh 0.5em 1em 0.5em;
+  padding: 10vh 0.5em 1em 0.5em;
   flex-grow: 0;
   font-family: monabold;
   font-size: 10vh;
@@ -2052,7 +2052,7 @@ p {
   height: 100vh;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
-  padding: 15vh 0.5em 1em 0.5em;
+  padding: 10vh 0.5em 1em 0.5em;
   flex-grow: 0;
   font-family: monabold;
   font-size: 10vh;
@@ -2113,7 +2113,7 @@ p {
   height: 100vh;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
-  padding: 15vh 0.5em 1em 0.5em;
+  padding: 10vh 0.5em 1em 0.5em;
   flex-grow: 0;
   font-family: monabold;
   font-size: 10vh;
@@ -2130,7 +2130,7 @@ p {
   display: flex;
   flex-direction: column;
   align-items: start;
-  justify-content: center;
+  justify-content: start;
   width: 100%;
   height: 100%;
 }
@@ -2149,7 +2149,7 @@ p {
   width: 10%;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
-  height: 100%;
+  height: 50%;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
@@ -2367,7 +2367,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_acercadelproyecto h3 {
-    padding: 12vh 0.5em 1em 0.5em;
+    padding: 5vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
@@ -2456,7 +2456,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
-    padding: 12vh 0.5em 1em 0.5em;
+    padding: 5vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
@@ -2517,7 +2517,7 @@ p {
     height: 100vh;
   }
   .body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
-    padding: 12vh 0.5em 1em 0.5em;
+    padding: 5vh 0.5em 1em 0.5em;
     flex-grow: 0;
     font-family: monabold;
     font-size: 6vh;
