--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -166,15 +166,41 @@
       flex-direction: column;
       height: 100vh;
 
-      h3 {
-        padding: 10vh 0.5em 1em 0.5em;
-        flex-grow: 0;
-        font-family: monabold;
-        font-size: 10vh;
-        font-weight: 900;
-        text-align: left;
-        color: #000;
+      .titulo_cont{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10vh 0.5em 10vh 0.5em;
         border-bottom: #000 solid 1px;
+
+        h5{
+          padding-bottom: 0.5em;
+          width: 100%;
+          font-family: monaregular;
+          font-size: 1.5vw;
+          font-weight: normal;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1;
+          letter-spacing: normal;
+          text-align: center;
+          color: #000;
+        }
+
+        h3 {
+          font-family: monabold;
+          font-size: 4vw;
+          font-weight: 600;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1;
+          letter-spacing: normal;
+          text-align: center;
+          color: #000;
+
+        }
+
       }
 
       .cont_data_proyecto {
@@ -244,7 +270,7 @@
           font-size: 1.2vw;
           font-weight: 400;
           letter-spacing: normal;
-          text-align: left;
+          text-align: center;
           color: #000;
           border-bottom: #000 1px solid;
         }
@@ -264,11 +290,11 @@
 
       h3 {
         padding: 10vh 0.5em 1em 0.5em;
-        flex-grow: 0;
+        width: 100%;
         font-family: monabold;
-        font-size: 10vh;
-        font-weight: 900;
-        text-align: left;
+        font-size: 4vw;
+        font-weight: 600;
+        text-align: center;
         color: #000;
         border-bottom: #000 solid 1px;
       }
@@ -331,11 +357,11 @@
 
       h3 {
         padding: 10vh 0.5em 1em 0.5em;
-        flex-grow: 0;
+        width: 100%;
         font-family: monabold;
-        font-size: 10vh;
-        font-weight: 900;
-        text-align: left;
+        font-size: 4vw;
+        font-weight: 600;
+        text-align: center;
         color: #000;
         border-bottom: #000 solid 1px;
       }
@@ -615,15 +641,41 @@
         flex-direction: column;
         height: 100vh;
 
-        h3 {
-          padding: 5vh 0.5em 1em 0.5em;
-          flex-grow: 0;
-          font-family: monabold;
-          font-size: 6vh;
-          font-weight: 900;
-          text-align: left;
-          color: #000;
+        .titulo_cont{
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          padding: 5vh 0.5em 5vh 0.5em;
           border-bottom: #000 solid 1px;
+  
+          h5{
+            padding-bottom: 0.5em;
+            width: 100%;
+            font-family: monaregular;
+            font-size: 3vw;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1;
+            letter-spacing: normal;
+            text-align: center;
+            color: #000;
+          }
+  
+          h3 {
+            font-family: monabold;
+            font-size: 5vw;
+            font-weight: 600;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1;
+            letter-spacing: normal;
+            text-align: center;
+            color: #000;
+  
+          }
+  
         }
 
         .cont_data_proyecto {
@@ -673,7 +725,7 @@
               }
 
               .cont_icon {
-                background: #ff4d00;
+                background: #ffffff;
                 top: 0;
                 position: absolute;
                 right: 0;
@@ -681,7 +733,7 @@
                 border-left: 1px solid black;
 
                 img {
-                  filter: invert(100%);
+                  filter: invert(0%);
                   margin: 1.5em;
                   width: 5vw;
                 }
@@ -696,7 +748,7 @@
             font-size: 3vw;
             font-weight: 400;
             letter-spacing: normal;
-            text-align: left;
+            text-align: center;
             color: #000;
             border-bottom: #000 1px solid;
           }
@@ -715,12 +767,13 @@
         height: 100vh;
 
         h3 {
-          padding: 5vh 0.5em 1em 0.5em;
+          width: 100%;
+          padding: 5vw 0.5em 5vw 0.5em;
           flex-grow: 0;
           font-family: monabold;
-          font-size: 6vh;
-          font-weight: 900;
-          text-align: left;
+          font-size: 4vw;
+          font-weight: 600;
+          text-align: center;
           color: #000;
           border-bottom: #000 solid 1px;
         }
@@ -782,12 +835,13 @@
         height: 100vh;
 
         h3 {
-          padding: 5vh 0.5em 1em 0.5em;
+          width: 100%;
+          padding: 5vw 0.5em 5vw 0.5em;
           flex-grow: 0;
           font-family: monabold;
-          font-size: 6vh;
-          font-weight: 900;
-          text-align: left;
+          font-size: 4vw;
+          font-weight: 600;
+          text-align: center;
           color: #000;
           border-bottom: #000 solid 1px;
         }
