add ajustes estyle de page proyectos

--- a/style/sass.css
+++ b/style/sass.css
@@ -2074,7 +2074,7 @@ p {
   height: 100vh;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_paletadecolores h3 {
-  padding: 10vh 0.5em 1em 0.5em;
+  padding: 0.5em;
   width: 100%;
   font-family: monabold;
   font-size: 4vw;
@@ -2135,7 +2135,7 @@ p {
   height: 100vh;
 }
 .body_proyecto .cont_proyectos_scrolls .cont_fuentes h3 {
-  padding: 10vh 0.5em 1em 0.5em;
+  padding: 0.5em;
   width: 100%;
   font-family: monabold;
   font-size: 4vw;
@@ -2144,55 +2144,37 @@ p {
   color: #000;
   border-bottom: #000 solid 1px;
 }
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente {
-  border-bottom: #000 solid 1px;
-  padding-top: 2em;
-  padding-left: 2em;
-  padding-bottom: 1em;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente {
   display: flex;
+  padding-left: 5em;
+  padding-right: 5em;
   flex-direction: column;
-  align-items: start;
-  justify-content: start;
-  width: 100%;
-  height: 100%;
+  height: 80%;
+  align-items: center;
+  justify-content: space-around;
 }
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente p {
-  font-family: monamedium;
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .img_fuente {
+  width: 100%;
+}
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente .img_pie_fuente {
+  width: 40%;
+}
+.body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente .parrafo_pie_fuente {
+  width: 50%;
+  font-family: monaregular;
   font-size: 1.2vw;
   font-weight: 300;
   font-stretch: normal;
   font-style: normal;
-  line-height: 1;
-  letter-spacing: 0.6px;
-  text-align: start;
-  color: #000;
-}
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .img_font {
-  width: 10%;
-}
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
-  height: 50%;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
-  gap: 1em;
-}
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 0.5em;
-}
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font img {
-  width: 20%;
-}
-.body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
-  display: inline;
-  width: 100%;
-  font-family: Gotham;
-  font-size: 20px;
-  font-weight: 300;
-  line-height: 1;
+  line-height: 1.2;
+  letter-spacing: normal;
+  text-align: justify;
   color: #000;
 }
 .body_proyecto .cont_img {
@@ -2200,30 +2182,24 @@ p {
   height: 100%;
   display: flex;
   flex-direction: column;
+  border-top: #000 solid 1px;
   border-bottom: #000 solid 1px;
 }
 .body_proyecto .cont_img .cont_img_grup {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_uno {
   width: 50%;
-  overflow: hidden;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_uno img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_dos {
   width: 50%;
 }
 .body_proyecto .cont_img .cont_img_grup .cont_img_dos video {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 .body_proyecto .cont_img .cont_img_tres {
   width: 100%;
@@ -2572,56 +2548,42 @@ p {
     color: #000;
     border-bottom: #000 solid 1px;
   }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente {
-    border-bottom: #000 solid 1px;
-    padding-top: 2em;
-    padding-left: 2em;
-    padding-bottom: 1em;
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente {
+    display: flex;
+    padding-left: 1em;
+    padding-right: 1em;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    justify-content: space-around;
+  }
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .img_fuente {
+    width: 100%;
+  }
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente {
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    height: 100%;
+    height: 90%;
+    background: rgb(245, 245, 245);
+    padding: 1em;
   }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente p {
-    font-family: monamedium;
-    font-size: 3vw;
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente .img_pie_fuente {
+    width: 100%;
+  }
+  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .contenido_fuente .cont_pie_fuente .parrafo_pie_fuente {
+    width: 100%;
+    font-family: monalight;
+    font-size: 4vw;
     font-weight: 300;
     font-stretch: normal;
     font-style: normal;
-    line-height: 1;
-    letter-spacing: 0.6px;
-    text-align: start;
-    color: #000;
-  }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .img_font {
-    width: 30%;
-  }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
-    gap: 1em;
-  }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 0.5em;
-  }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font img {
-    width: 30%;
-  }
-  .body_proyecto .cont_proyectos_scrolls .cont_fuentes .fuente .cont_fuentess .cont_font .nombre_fuente {
-    display: inline;
-    width: 100%;
-    font-family: monaregular;
-    font-size: 3vw;
-    font-weight: 300;
-    line-height: 1;
-    color: #000;
+    line-height: 1.2;
+    letter-spacing: normal;
+    text-align: justify;
+    color: #030303;
   }
   .body_proyecto .cont_img {
     background: #ffffff;
