--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -289,7 +289,7 @@
       height: 100vh;
 
       h3 {
-        padding: 10vh 0.5em 1em 0.5em;
+        padding: 0.5em;
         width: 100%;
         font-family: monabold;
         font-size: 4vw;
@@ -356,7 +356,7 @@
       height: 100vh;
 
       h3 {
-        padding: 10vh 0.5em 1em 0.5em;
+        padding: 0.5em;
         width: 100%;
         font-family: monabold;
         font-size: 4vw;
@@ -366,63 +366,40 @@
         border-bottom: #000 solid 1px;
       }
 
-      .fuente {
-        border-bottom: #000 solid 1px;
-        padding-top: 2em;
-        padding-left: 2em;
-        padding-bottom: 1em;
+      .contenido_fuente{
         display: flex;
+        padding-left: 5em;
+        padding-right: 5em;
         flex-direction: column;
-        align-items: start;
-        justify-content: start;
-        width: 100%;
-        height: 100%;
-
-        p {
-          font-family: monamedium;
-          font-size: 1.2vw;
-          font-weight: 300;
-          font-stretch: normal;
-          font-style: normal;
-          line-height: 1;
-          letter-spacing: 0.6px;
-          text-align: start;
-          color: #000;
-        }
-
-        .img_font {
-          width: 10%;
-        }
-
-        .cont_fuentess {
-          height: 50%;
+        height: 80%;
+        align-items: center;
+        justify-content: space-around;
+        .img_fuente{
           width: 100%;
-          display: grid;
-          grid-template-columns: repeat(auto-fit, minmax(min(70px, 100%), 1fr));
-          gap: 1em;
-
-          .cont_font {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 0.5em;
-
-            img {
-              width: 20%;
-            }
-
-            .nombre_fuente {
-              display: inline;
-              width: 100%;
-              font-family: Gotham;
-              font-size: 20px;
-              font-weight: 300;
-              line-height: 1;
-              color: #000;
-            }
+        }
+        .cont_pie_fuente{
+          display: flex;
+          flex-direction: row;
+          justify-content:space-between;
+          width: 100%;
+          .img_pie_fuente{
+            width: 40%;
+          }
+          .parrafo_pie_fuente{
+            width: 50%;
+            font-family: monaregular;
+            font-size: 1.2vw;
+            font-weight: 300;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.2;
+            letter-spacing: normal;
+            text-align: justify;
+            color: #000;
           }
         }
       }
+
     }
   }
 
@@ -431,21 +408,17 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    border-top: #000 solid 1px;
     border-bottom: #000 solid 1px;
 
     .cont_img_grup {
       display: flex;
       flex-direction: row;
-      justify-content: center;
-      align-items: center;
 
       .cont_img_uno {
         width: 50%;
-        overflow: hidden;
-
         img {
           width: 100%;
-          object-fit: cover;
         }
       }
 
@@ -454,7 +427,6 @@
 
         video {
           width: 100%;
-          object-fit: cover;
         }
       }
     }
@@ -846,66 +818,44 @@
           border-bottom: #000 solid 1px;
         }
 
-        .fuente {
-          border-bottom: #000 solid 1px;
-          padding-top: 2em;
-          padding-left: 2em;
-          padding-bottom: 1em;
+        .contenido_fuente{
           display: flex;
+          padding-left: 1em;
+          padding-right: 1em;
           flex-direction: column;
-          align-items: start;
-          justify-content: center;
-          width: 100%;
           height: 100%;
-
-          p {
-            font-family: monamedium;
-            font-size: 3vw;
-            font-weight: 300;
-            font-stretch: normal;
-            font-style: normal;
-            line-height: 1;
-            letter-spacing: 0.6px;
-            text-align: start;
-            color: #000;
-          }
-
-          .img_font {
-            width: 30%;
-          }
-
-          .cont_fuentess {
-            height: 100%;
+          align-items: center;
+          justify-content: space-around;
+          .img_fuente{
             width: 100%;
-            display: grid;
-            grid-template-columns: repeat(
-              auto-fit,
-              minmax(min(70px, 100%), 1fr)
-            );
-            gap: 1em;
-
-            .cont_font {
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              gap: 0.5em;
-
-              img {
-                width: 30%;
-              }
-
-              .nombre_fuente {
-                display: inline;
-                width: 100%;
-                font-family: monaregular;
-                font-size: 3vw;
-                font-weight: 300;
-                line-height: 1;
-                color: #000;
-              }
+          }
+          .cont_pie_fuente{
+            display: flex;
+            flex-direction: column;
+            justify-content:space-between;
+            align-items: center;
+            width: 100%;
+            height: 90%;
+            background: rgb(245, 245, 245);
+            padding: 1em;
+            .img_pie_fuente{
+              width: 100%;
+            }
+            .parrafo_pie_fuente{
+              width: 100%;
+              font-family: monalight;
+              font-size: 4vw;
+              font-weight: 300;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: 1.2;
+              letter-spacing: normal;
+              text-align: justify;
+              color: #030303;
             }
           }
         }
+
       }
     }
 
