--- a/sass/_proyecto.scss
+++ b/sass/_proyecto.scss
@@ -268,11 +268,14 @@
           width: 100%;
           font-family: monaregular;
           font-size: 1.2vw;
-          font-weight: 400;
+          font-weight: 300;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.2;
           letter-spacing: normal;
           text-align: center;
           color: #000;
-          border-bottom: #000 1px solid;
+          border-bottom: 1px solid black;
         }
       }
     }
@@ -384,6 +387,10 @@
           width: 100%;
           .img_pie_fuente{
             width: 40%;
+          }
+
+          .img_dos_pie_fuente{
+            display: none;
           }
           .parrafo_pie_fuente{
             width: 50%;
@@ -716,13 +723,15 @@
           .data_proyecto {
             padding: 3em 1.5em 3em 1.5em;
             width: 100%;
-            font-family: monaregular;
-            font-size: 3vw;
-            font-weight: 400;
+            font-family: monalight;
+            font-size: 4vw;
+            font-weight: 300;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.2;
             letter-spacing: normal;
-            text-align: center;
-            color: #000;
-            border-bottom: #000 1px solid;
+            text-align: justify;
+            color: #030303;
           }
         }
       }
@@ -827,18 +836,23 @@
           align-items: center;
           justify-content: space-around;
           .img_fuente{
+            padding-top: 2em;
             width: 100%;
           }
           .cont_pie_fuente{
             display: flex;
             flex-direction: column;
-            justify-content:space-between;
+            justify-content:space-evenly;
             align-items: center;
             width: 100%;
             height: 90%;
-            background: rgb(245, 245, 245);
-            padding: 1em;
+            background: rgb(255, 255, 255);
+            padding: 0em;
             .img_pie_fuente{
+              width: 100%; 
+            }
+            .img_dos_pie_fuente{
+              display:block;
               width: 100%;
             }
             .parrafo_pie_fuente{
